# wsbridge

./: Cargo.toml  Readme.md
src/: connection_manager.rs  main.rs  messages.rs  ws_connection.rs
static/: index.html
